# segtool

./: CMakeLists.txt  README.md  infer.py  main.cpp
humanseg/: __init__.py  unet.py  util.py
pointrend/: README.md  pointrend.py
